force-app/main/default/objects/WD_Order__c/WD_Order__c.object-meta.xml
<CustomObject>
    <label>WD Order</label>
    <nameField>
        <displayFormat>WDO-{000000}</displayFormat>
        <label>WDOrder #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WD Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>