force-app/main/default/objects/WD_Order__c/fields/Description_of_Job__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Job__c</fullName>
    <label>Description of Job</label>
    <type>TextArea</type>
</CustomField>