force-app/main/default/objects/WD_Order__c/fields/site__c.field-meta.xml
<CustomField>
    <fullName>site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Site name of WD Rig or WD Camp.  In the event that the camp has a different Site name to the Rig, the Rig Site name must be utilized.  The Client will wish to bill all camp charges to the Well/Rig.</inlineHelpText>
    <label>Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipName>WD_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>