force-app/main/default/objects/WD_Order__c/fields/WD_Unit_s__c.field-meta.xml
<CustomField>
    <fullName>WD_Unit_s__c</fullName>
    <inlineHelpText>There may be only one Unit or a combination of Rig, Camp, Transport, Hire</inlineHelpText>
    <label>WD Unit/s</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Camp #1</fullName>
            </value>
            <value>
                <fullName>Camp #2</fullName>
            </value>
            <value>
                <fullName>Camp #3</fullName>
            </value>
            <value>
                <fullName>Camp #4</fullName>
            </value>
            <value>
                <fullName>Camp #6</fullName>
            </value>
            <value>
                <fullName>Camp #7</fullName>
            </value>
            <value>
                <fullName>Rig #16</fullName>
            </value>
            <value>
                <fullName>Rig #6</fullName>
            </value>
            <value>
                <fullName>Flusbhy #2</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Hire Equipment</fullName>
            </value>
            <value>
                <fullName>Fabrication</fullName>
            </value>
            <value>
                <fullName>Servicing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>