force-app/main/default/objects/WD_Order__c/recordTypes/WD_Order_Combination.recordType-meta.xml
<RecordType>
    <fullName>WD_Order_Combination</fullName>
    <active>true</active>
    <label>WD Order - Combination</label>
</RecordType>